<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRootFilter1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:clipToPadding="false"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/topbarFilter1"
        layout="@layout/toolbar_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />
    <LinearLayout
        android:background="@color/white"
        android:layout_below="@+id/topbarFilter1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            app:helperText="yyyy-mm-dd"
            android:hint="@string/from">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/purple_500"
            app:helperText="yyyy-mm-dd"
            android:hint="@string/to">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEnd"
                android:drawableEnd="@drawable/ic_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:id="@+id/rlSearchInRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/search_in"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSearchInValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/all"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>
        <View
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/bg_activity_color" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApplyFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/apply_filter"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>