<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlRootSearhIn"
    android:paddingBottom="100dp"
    android:clipToPadding="false"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSearchIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/search_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvSearchIN"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="16dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#939DAE"
                android:checked="false"
                app:thumbTint="@color/white"
                app:trackTint="@color/purple_500" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/bg_activity_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="16dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#939DAE"
                android:checked="false"
                app:thumbTint="@color/white"
                app:trackTint="@color/purple_500" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/bg_activity_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="16dp"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#939DAE"
                android:checked="false"
                app:thumbTint="@color/white"
                app:trackTint="@color/purple_500" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/bg_activity_color" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApplyFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/apply_filter"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>