<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRootFilter2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="80dp"
    android:background="@color/white"
    android:clipToPadding="false"
    android:orientation="vertical">


    <include android:id="@+id/topbarFilter2"
        layout="@layout/toolbar_header"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbarFilter2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvSearchIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/search_in"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="16dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:theme="@style/SCBSwitch"
                app:thumbTint="@color/white"
                 />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/bg_activity_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="16dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:checked="false"
                app:thumbTint="@color/white"
                android:theme="@style/SCBSwitch"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/bg_activity_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="16dp"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:checked="false"
                app:thumbTint="@color/white"
                android:theme="@style/SCBSwitch" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/bg_activity_color" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApplyFilter2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/apply_filter"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>